@@ -2,6 +2,7 @@ Change history
 
 1.8
 - Update TOC for 5.3
+- Added support for ElvUI
 
 1.7
 - Update TOC for 5.2
